<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_betrothal"
        android:name="com.example.project.ui.betrothal.BetrothalFragment"
        android:label="@string/menu_betrothal"
        tools:layout="@layout/fragment_betrothal" />

    <fragment
        android:id="@+id/nav_dimsum"
        android:name="com.example.project.ui.dimsum.DimSumFragment"
        android:label="@string/menu_dimsum"
        tools:layout="@layout/fragment_dimsum" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

</navigation>